[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["Marlin Akhter <to_marlin@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.3"
pylint = "^3.0.2"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
